# pytest_dl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pytest_dl/: dataset.py  model.py  run.py  trainer.py
scripts/: format.sh  lint.sh
tests/: conftest.py  test_dataset.py  test_model.py  test_trainer.py
